[gd_scene load_steps=10 format=3 uid="uid://bdpkjdacx5ptn"]

[ext_resource type="Script" path="res://1_home_menu.gd" id="1_0vslh"]
[ext_resource type="Texture2D" uid="uid://c2fhfglfihrik" path="res://Visuals/Other/menubackground.jpg" id="1_q1dvm"]
[ext_resource type="Texture2D" uid="uid://c6ygxohsoakew" path="res://Visuals/Other/gametitle.png" id="2_tk0hn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_voydd"]
texture = ExtResource("1_q1dvm")
modulate_color = Color(0.450648, 0.450648, 0.450648, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nvh6k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uxrqx"]
bg_color = Color(0.581033, 0.581033, 0.581033, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0gw2m"]
bg_color = Color(0.223103, 0.223103, 0.223103, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qvqao"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lfnbs"]
texture = ExtResource("2_tk0hn")
modulate_color = Color(0.907942, 0.907942, 0.907942, 1)

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0vslh")

[node name="Panel - background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -67.0
offset_top = -1.0
offset_right = 63.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_voydd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -57.0
offset_right = 123.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Button - start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_nvh6k")
theme_override_styles/hover = SubResource("StyleBoxFlat_uxrqx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0gw2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_qvqao")
text = "Start Game"

[node name="Button - instructions" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_nvh6k")
theme_override_styles/hover = SubResource("StyleBoxFlat_uxrqx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0gw2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_qvqao")
text = "Instructions"

[node name="Button- exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_nvh6k")
theme_override_styles/hover = SubResource("StyleBoxFlat_uxrqx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0gw2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_qvqao")
text = "Exit"

[node name="Panel - title" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -438.0
offset_top = -270.0
offset_right = 438.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lfnbs")

[connection signal="pressed" from="VBoxContainer/Button - start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button - start" to="." method="_on_button__start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button - instructions" to="." method="_on_button__instructions_pressed"]
[connection signal="pressed" from="VBoxContainer/Button - instructions" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button- exit" to="." method="_on_button_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/Button- exit" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="VBoxContainer/Button- exit" to="." method="_on_exit_pressed"]
